@@ -1,3 +1,7 @@
+2006-02-11  Zoltan Varga  <vargaz@gmail.com>
+
+	* FieldInfoTest.cs: Revert nullable reftype tests.
+
 2006-02-09  Zoltan Varga  <vargaz@gmail.com>
 
 	* FieldInfoTest.cs: Add tests for nullable reference types.
